--- a/Pages/uFrame_Home.fmx
+++ b/Pages/uFrame_Home.fmx
@@ -1,41 +1,42 @@
-inherited Frame_Home: TFrame_Home
-  Size.Width = 536.00000000000000000
-  Size.Height = 372.00000000000000000
-  object Button1: TButton
-    Position.X = 88.00000000000000000
-    Position.Y = 136.00000000000000000
-    Size.Width = 225.00000000000000000
-    Size.Height = 81.00000000000000000
+object Frame_Home: TFrame_Home
+  Size.Width = 536.000000000000000000
+  Size.Height = 372.000000000000000000
+  Size.PlatformDefault = False
+  object btnAboutPage: TButton
+    Position.X = 88.000000000000000000
+    Position.Y = 136.000000000000000000
+    Size.Width = 225.000000000000000000
+    Size.Height = 81.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
     Text = 'Go to About Page'
     TextSettings.Trimming = None
-    OnClick = Button1Click
+    OnClick = btnAboutPageClick
   end
   object Label1: TLabel
     Align = Top
     StyledSettings = [Family, FontColor]
-    Margins.Left = 40.00000000000000000
-    Margins.Top = 20.00000000000000000
-    Position.X = 40.00000000000000000
-    Position.Y = 20.00000000000000000
-    Size.Width = 496.00000000000000000
-    Size.Height = 33.00000000000000000
+    Margins.Left = 40.000000000000000000
+    Margins.Top = 20.000000000000000000
+    Position.X = 40.000000000000000000
+    Position.Y = 20.000000000000000000
+    Size.Width = 496.000000000000000000
+    Size.Height = 33.000000000000000000
     Size.PlatformDefault = False
-    TextSettings.Font.Size = 24.00000000000000000
+    TextSettings.Font.Size = 24.000000000000000000
     TextSettings.Font.StyleExt = {00070000000000000004000000}
     Text = 'HOME'
     TabOrder = 2
   end
-  object Button2: TButton
-    Position.X = 88.00000000000000000
-    Position.Y = 248.00000000000000000
-    Size.Width = 225.00000000000000000
-    Size.Height = 81.00000000000000000
+  object btnInstructionsPage: TButton
+    Position.X = 88.000000000000000000
+    Position.Y = 248.000000000000000000
+    Size.Width = 225.000000000000000000
+    Size.Height = 81.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
     Text = 'Go to Instructions Page'
     TextSettings.Trimming = None
-    OnClick = Button1Click
+    OnClick = btnInstructionsPageClick
   end
 end
